--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<title>JordiBot</title>
+    <meta charset="UTF-8" />
+    <title>JordiBot</title>
   </head>
   <body>
-	<div id="root"></div>
-	<script type="module" src="src/main.jsx"></script>
+    <div id="root"></div>
+    <script type="module" src="src/main.jsx"></script>
   </body>
 </html>
